# FP_Remover

./: CMakeLists.txt  Character.h  SaveLoader.h  Wrestler.cpp  Wrestler.h  WrestlerLoader.cpp  WrestlerLoader.h  gui.cpp  loader  loader.cpp  loader_tester.cpp  makefile  savedata
headers/: SaveLoader.h
source/: Character.cpp
